# HelloNeighborBot

./: .gitignore  CMakeLists.txt  DESIGN.md  HANDOFF.md  LICENSE  README.md
config/: config.example.json
config/routes/: act1.example.json
docs/: BUILDING.md  FINDING_OFFSETS.md  ROUTE_FORMAT.md  USAGE.md
src/dll/: Bot.cpp  Bot.h  Config.cpp  Config.h  Hotkeys.cpp  Hotkeys.h  Logger.cpp  Logger.h  dllmain.cpp
src/dll/mem/: Pattern.cpp  Pattern.h
src/dll/route/: RouteEngine.cpp  RouteEngine.h
src/dll/ue4/: SdkAccess.cpp  SdkAccess.h  UE4.h
src/dll/ui/: Menu.cpp  Menu.h  Overlay.cpp  Overlay.h
src/injector/: injector.cpp
